service-cover.yaml
apiVersion: v1
kind: Service
metadata:
  name: cover-service
spec:
  selector:
    app: web-cover
  ports:
    - port: 80
      targetPort: 80
