service-glass.yaml
apiVersion: v1
kind: Service
metadata:
  name: glass-service
spec:
  selector:
    app: web-glass
  ports:
    - port: 80
      targetPort: 80
