ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: glass.rajkosh.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glass-service
                port:
                  number: 80
    - host: cover.rajkosh.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cover-service
                port:
                  number: 80
